package com.telran._20240614.warehouse;

public class Printer {

    public void print (String output) {
        System.out.println(output);
    }
}
